Desabilitar menu na tela inicial

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
 <ion-content padding>
   <h3>Monitoria</h3>
   
-  <img src=C:\Aleff\AppMonitoria\AppMonitoria\src\assets\imgs\monitoria.png alt="logo">
+  <img src="/src/assets/imgs/tela-inicial.png" alt="logo">
 
 
   <form>
@@ -18,7 +18,7 @@
 
     </ion-item>
 
-    <button ion-button block>Entrar</button>
+    <button ion-button block (click)="login()">Entrar</button>
   </form>
 
   <button ion-button block outline>Registrar</button>
